test/compilable/extra-files/pkg_import3b/mod.d
module pkg_import3b.mod;

int bar() { return 3; }
