test/fail_compilation/fail25.d
class Qwert {
     int yuiop;

     static int asdfg() {
         return Qwert.yuiop + 105;
     }
}

